[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
redis = { version = "0.23.0", features = ["aio", "tokio-comp"] }

rusoto_core = "0.47.0"
rusoto_ec2 = "0.47.0"
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio-sync = "0.1.8"
